2010-08-08  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gnotebook.R: bug fix in [<- method. 

	* R/qtfuns.R: put in named enumerations as needed

	* R/gdfnotebook.R (.addDataFrameToNotebook): fixed bug with gdfnotebook
