@@ -8,5 +8,5 @@ Suggests:
 Description: Port of gWidgets API to the qtbase package.
 License: GPL (>= 2)
 URL: http://www.math.csi.cuny.edu/pmg
-LazyLoad: yes
+LazyLoad: no
 Packaged: 2010-04-17 13:46:16 UTC; verzani
